--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scaffold-react",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@arco-design/web-react": "^2.36.1",
@@ -52,6 +52,7 @@
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "6",
+    "redux-persist": "^6.0.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
