--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_APP_NAME=grf-react
 REACT_APP_API_URL=http://127.0.0.1:8080/api/v1
+
+REACT_APP_INIT_PHONE=12345678900
+REACT_APP_INIT_PASSWORD=admin123
